ASCTest/bin/Release/tests/const/FuncTest.as
package {
	[Doc]
	public class FuncTest{};
}
//下例说明，如果尝试多次为一个常量赋值将发生错误。 
const MIN_AGE:int = 21;
MIN_AGE = 18; // error
